# split-pay

./: .env.example  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  rewrite.cjs
.github/workflows/: audit.yml  ci.yml  lint.yml
contracts/split_contract/: Cargo.toml
contracts/split_contract/src/: lib.rs  test.rs
contracts/split_contract/test_snapshots/test/: test_execute_split.1.json
scripts/: deploy.js  deploy.sh
src/: App.jsx  index.css
src/components/: ActivityFeed.jsx  BalanceCard.jsx  ContractPanel.jsx  DevLabs.jsx  FreighterNotice.jsx  OnboardingWizard.jsx  SavedGroups.jsx  TransactionStatus.jsx  WalletConnect.jsx  WalletModal.jsx
src/services/: soroban.js  stellar.js  walletKit.js
